--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/white" />
-    <item>
-        <bitmap
-            android:gravity="center_vertical"
-            android:src="@drawable/ic_splash_default" />
+    <!--<item android:drawable="@color/white" />-->
+    <!--<item>-->
+    <!--<bitmap-->
+    <!--android:gravity="center_vertical"-->
+    <!--android:src="@drawable/ic_splash_default" />-->
+
+    <!--</item>-->
+    <!--<item-->
+
+    <!--android:bottom="60dp"-->
+    <!--android:gravity="bottom|center_horizontal">-->
+    <!--<bitmap-->
+
+    <!--android:gravity="bottom"-->
+    <!--android:src="@drawable/ic_splash_copy" />-->
+    <!--</item>-->
+    <item android:drawable="@drawable/ic_splash"/>
+    <!--<item>-->
         <!--<bitmap-->
-        <!--android:gravity="bottom"-->
-        <!--android:src="@drawable/ic_splash_copy" />-->
-    </item>
-    <item
+            <!--android:gravity="center"-->
+            <!--android:src="@drawable/ic_splash"/>-->
 
-        android:bottom="60dp"
-        android:gravity="bottom|center_horizontal">
-        <bitmap
-
-            android:gravity="bottom"
-            android:src="@drawable/ic_splash_copy" />
-    </item>
+    <!--</item>-->
 </layer-list>
